--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "serve-static": "^1.13.2"
   },
   "devDependencies": {},
   "scripts": {
