--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "mongodb": "^3.1.10",
     "passport": "^0.4.0",
     "serve-static": "^1.13.2"
   },
