--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
+    "mongoose": "^5.4.1",
     "passport": "^0.4.0",
     "serve-static": "^1.13.2"
   },
