--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
-    "serve-static": "^1.13.2"
+    "serve-static": "^1.13.2",
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {},
   "scripts": {
