--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ yarn.lock
 package-lock.json
 
 # End of https://www.gitignore.io/api/node,solidity,soliditytruffle
+
+#credentials
+credentials.js
