--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
     "serve-static": "^1.13.2",
+    "truffle-hdwallet-provider": "^1.0.2",
     "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {},
